@@ -79,10 +79,6 @@
 
 // define some symbols which winsock.h defines but traditional BSD headers
 // don't
-#ifndef __WINDOWS__
-    #define SOCKET int
-#endif
-
 #ifndef INVALID_SOCKET
     #define INVALID_SOCKET (-1)
 #endif
@@ -293,7 +289,7 @@ public:
     // TODO: make these fields protected and provide accessors for those of
     //       them that wxSocketBase really needs
 //protected:
-    SOCKET m_fd;
+    wxSOCKET_T m_fd;
 
     int m_initialRecvBufferSize;
     int m_initialSendBufferSize;
